# M-resarch

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
assets/models/: bunny_binary.ply
assets/models/bunny/: bunny_filledholes.blend  bunny_resized.blend
scripts/: args.py  clean_results.py  main.py  ply2bin.py  stl2ply.py
src/: main.py
src/experiments/: bunny.py  bunny_render.py  test.py
utils/: utils.py
